# OniReader

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: 1005.oni
include/: OniReader.h
src/: OniReader.cpp
test/: test.cpp
